Disable self hosted in the client as well

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       NUXT_PUBLIC_APP_URL: ${NUXT_PUBLIC_APP_URL:-${APP_URL:-/}}
       NUXT_PUBLIC_API_BASE: ${NUXT_PUBLIC_API_BASE:-$APP_URL/api}
       NUXT_PRIVATE_API_BASE: http://ingress/api
+      NUXT_PUBLIC_SELF_HOSTED: "false"
     env_file: ./client/.env
     volumes:
       - secrets-config:/secrets
