Using regexs is more succinct

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -23,22 +23,7 @@ server {
            proxy_set_header Connection "Upgrade";
          }
 
-         location /api/ {
-              set $original_uri $uri;
-              try_files $uri $uri/ /index.php$is_args$args;
-         }
-
-         location /open/ {
-              set $original_uri $uri;
-              try_files $uri $uri/ /index.php$is_args$args;
-         }
-
-         location /local/temp/ {
-              set $original_uri $uri;
-              try_files $uri $uri/ /index.php$is_args$args;
-         }
-
-         location /forms/assets/ {
+         location ~/(api|open|local\/temp|forms\/assets)/ {
               set $original_uri $uri;
               try_files $uri $uri/ /index.php$is_args$args;
          }
