--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "crisp-sdk-web": "^1.0.21",
     "date-fns": "^2.30.0",
     "debounce": "^1.2.1",
+    "esbuild": "^0.23.0",
     "fuse.js": "^6.4.6",
     "js-sha256": "^0.10.0",
     "libphonenumber-js": "^1.10.44",
