Simplified docker setup, created script to generate .env

--- a/.env.docker
+++ b/.env.docker
@@ -12,7 +12,7 @@ FILESYSTEM_DRIVER=local
 BROADCAST_CONNECTION=log
 CACHE_STORE=redis
 QUEUE_CONNECTION=redis
-SESSION_DRIVER=file
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
 MAIL_MAILER=log
