--- a/.env.example
+++ b/.env.example
@@ -84,3 +84,5 @@ CADDY_AUTHORIZED_IPS=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URL=http://localhost:3000/settings/connections/callback/google
+
+GOOGLE_FONTS_API_KEY=
