Clean env files

--- a/api/.env.example
+++ b/api/.env.example
@@ -5,6 +5,8 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
+SELF_HOSTED=true
+
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
@@ -87,3 +89,5 @@ GOOGLE_REDIRECT_URL=http://localhost:3000/settings/connections/callback/google
 GOOGLE_AUTH_REDIRECT_URL=http://localhost:3000/oauth/google/callback
 
 GOOGLE_FONTS_API_KEY=
+
+ZAPIER_ENABLED=false
