--- a/api/.env.docker
+++ b/api/.env.docker
@@ -12,7 +12,10 @@ LOG_LEVEL=debug
 FILESYSTEM_DRIVER=local
 
 BROADCAST_CONNECTION=log
+
 CACHE_STORE=redis
+CACHE_DRIVER=redis
+
 QUEUE_CONNECTION=redis
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
