Use `primary` tailwind classes instead of `blue`, allow primary to be set with env file

--- a/client/.env.example
+++ b/client/.env.example
@@ -7,3 +7,4 @@ NUXT_PUBLIC_ENV=
 NUXT_PUBLIC_GOOGLE_ANALYTICS_CODE=
 NUXT_PUBLIC_H_CAPTCHA_SITE_KEY=
 NUXT_API_SECRET=secret
+NUXT_THEME_PRIMARY_COLOR=
