update quilly, fix bugs

--- a/client/package.json
+++ b/client/package.json
@@ -59,6 +59,7 @@
     "prismjs": "^1.24.1",
     "qrcode": "^1.5.1",
     "query-builder-vue-3": "^1.0.1",
+    "quill": "^2.0.2",
     "tailwind-merge": "^2.3.0",
     "tinymotion": "^0.2.0",
     "v-calendar": "^3.1.2",
@@ -70,7 +71,6 @@
     "vue-json-pretty": "^2.4.0",
     "vue-notion": "^3.0.0-beta.1",
     "vue-signature-pad": "^3.0.2",
-    "vue3-editor": "^0.1.1",
     "vuedraggable": "next",
     "webcam-easy": "^1.1.1"
   },
