--- a/client/package.json
+++ b/client/package.json
@@ -15,14 +15,14 @@
   "devDependencies": {
     "@nuxt/devtools": "~1.0.0",
     "@nuxt/eslint-config": "^0.2.0",
+    "@nuxt/icon": "^1.6.1",
+    "@nuxtjs/sitemap": "^6.1.3",
     "@zadigetvoltaire/nuxt-gtm": "^0.0.13",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "nuxt": "^3.13.2",
-    "nuxt-icon": "^0.6.10",
-    "@nuxtjs/sitemap": "^6.0.0",
     "nuxt-utm": "^0.1.10",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
@@ -39,7 +39,6 @@
     "@popperjs/core": "^2.11.8",
     "@sentry/vite-plugin": "^2.22.6",
     "@sentry/vue": "^7.119.2",
-    "vue": "^3.2.13",
     "@vueuse/components": "^10.11.1",
     "@vueuse/core": "^10.5.0",
     "@vueuse/motion": "^2.2.6",
@@ -64,6 +63,7 @@
     "tailwind-merge": "^2.5.4",
     "tinymotion": "^0.2.0",
     "v-calendar": "^3.1.2",
+    "vue": "^3.2.13",
     "vue-chartjs": "^5.3.1",
     "vue-codemirror": "^6.1.1",
     "vue-confetti": "^2.3.0",
