--- a/client/package.json
+++ b/client/package.json
@@ -62,7 +62,7 @@
     "quill": "^2.0.2",
     "tailwind-merge": "^2.5.4",
     "tinymotion": "^0.2.0",
-    "v-calendar": "^3.1.2",
+    "v-calendar": "3.0.1",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.3.1",
     "vue-codemirror": "^6.1.1",
