--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -191,7 +191,7 @@ jobs:
         run: cp .env.example .env
 
       - name: Install npm dependencies
-        run: npm install --no-audit --no-progress --silent
+        run: npm ci --no-audit --no-progress --silent
 
       - name: Build client
         run: npm run build
