--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,9 @@
     "lint:fix": "eslint . --fix --ext .js,.vue"
   },
   "devDependencies": {
+    "@iconify-json/clarity": "^1.2.1",
+    "@iconify-json/ic": "^1.2.1",
+    "@iconify-json/octicon": "^1.2.1",
     "@nuxt/devtools": "^1.6.1",
     "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/icon": "^1.8.2",
@@ -23,7 +26,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "nuxt": "^3.14.1592",
-    "nuxt-utm": "^0.1.10",
+    "nuxt-utm": "^0.2.2",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "sass": "^1.80.2",
@@ -39,10 +42,11 @@
     "@popperjs/core": "^2.11.8",
     "@sentry/vite-plugin": "^2.22.6",
     "@sentry/vue": "^7.119.2",
-    "@vueuse/components": "^10.11.1",
-    "@vueuse/core": "^10.5.0",
+    "@vueuse/components": "^11.2.0",
+    "@vueuse/core": "^11.2.0",
+    "@vueuse/integrations": "^11.2.0",
     "@vueuse/motion": "^2.2.6",
-    "@vueuse/nuxt": "^10.11.1",
+    "@vueuse/nuxt": "^11.2.0",
     "amplitude-js": "^8.21.9",
     "chart.js": "^4.4.5",
     "clone-deep": "^4.0.1",
@@ -51,7 +55,7 @@
     "date-fns": "^2.30.0",
     "debounce": "^1.2.1",
     "esbuild": "^0.23.1",
-    "fuse.js": "^6.6.2",
+    "fuse.js": "^7.0.0",
     "js-sha256": "^0.10.1",
     "libphonenumber-js": "^1.11.12",
     "object-to-formdata": "^4.5.1",
@@ -63,8 +67,7 @@
     "tailwind-merge": "^2.5.4",
     "tinymotion": "^0.2.0",
     "v-calendar": "3.0.1",
-    "vue": "^3.2.13",
-    "vue-chartjs": "^5.3.1",
+    "vue-chartjs": "^5.3.2",
     "vue-codemirror": "^6.1.1",
     "vue-confetti": "^2.3.0",
     "vue-country-flag-next": "^2.3.2",
