Update form components and dependencies
- Added '@iconify-json/mdi' as a new development dependency in both package.json and package-lock.json.
- Enhanced the EditableTag component's hover effect for better user experience.
- Refactored OpenCompleteForm.vue to include a tooltip for hiding the title, improving usability for admin users.
- Adjusted styles in FormCustomization.vue and FormEditorPreview.vue for better layout and responsiveness.

These changes improve the functionality and visual consistency of the form components.

--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@iconify-json/clarity": "^1.2.1",
     "@iconify-json/ic": "^1.2.1",
+    "@iconify-json/mdi": "^1.2.1",
     "@iconify-json/octicon": "^1.2.1",
     "@nuxt/devtools": "^1.6.1",
     "@nuxt/eslint-config": "^0.2.0",
