--- a/client/package.json
+++ b/client/package.json
@@ -62,6 +62,7 @@
     "pinia": "^2.2.4",
     "prismjs": "^1.29.0",
     "qrcode": "^1.5.4",
+    "quagga": "^0.12.1",
     "query-builder-vue-3": "^1.0.1",
     "quill": "^2.0.2",
     "tailwind-merge": "^2.5.4",
