--- a/api/.env.example
+++ b/api/.env.example
@@ -94,3 +94,7 @@ GOOGLE_AUTH_REDIRECT_URL=http://localhost:3000/oauth/google/callback
 GOOGLE_FONTS_API_KEY=
 
 ZAPIER_ENABLED=false
+
+STRIPE_CLIENT_ID=
+STRIPE_CLIENT_SECRET=
+STRIPE_REDIRECT_URI=http://localhost:3000/settings/connections/callback/stripe
