Stripe Payment Frontend - WIP

--- a/client/.env.example
+++ b/client/.env.example
@@ -8,3 +8,4 @@ NUXT_PUBLIC_GOOGLE_ANALYTICS_CODE=
 NUXT_PUBLIC_H_CAPTCHA_SITE_KEY=
 NUXT_PUBLIC_RE_CAPTCHA_SITE_KEY=
 NUXT_API_SECRET=secret
+STRIPE_PUBLISHABLE_KEY=
