Payment block backend validation and new package for stripe

--- a/api/composer.json
+++ b/api/composer.json
@@ -16,6 +16,7 @@
         "ext-json": "*",
         "aws/aws-sdk-php": "*",
         "doctrine/dbal": "*",
+        "fakerphp/faker": "^1.23",
         "giggsey/libphonenumber-for-php": "*",
         "google/apiclient": "^2.16",
         "guzzlehttp/guzzle": "*",
@@ -33,14 +34,14 @@
         "openai-php/client": "*",
         "propaganistas/laravel-disposable-email": "*",
         "sentry/sentry-laravel": "*",
+        "socialiteproviders/stripe": "^4.1",
         "spatie/laravel-data": "^4.6",
+        "spatie/laravel-ray": "*",
         "spatie/laravel-sitemap": "*",
         "spatie/laravel-sluggable": "*",
         "stevebauman/purify": "*",
         "tymon/jwt-auth": "*",
-        "vinkla/hashids": "*",
-        "fakerphp/faker": "^1.23",
-        "spatie/laravel-ray": "*"
+        "vinkla/hashids": "*"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^3.0.0",
