--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -50,6 +50,35 @@ jobs:
         working-directory: ./api
         run: ./vendor/bin/pint --test
 
+  client_lint:
+    runs-on: ubuntu-latest
+    name: Run client linters
+    defaults:
+      run:
+        working-directory: ./client
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: "20"
+
+      - uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Install npm dependencies
+        run: npm ci --no-audit --no-progress --silent
+
+      - name: Run ESLint
+        run: npm run lint
+
   tests:
     runs-on: ubuntu-latest
 
@@ -199,7 +228,7 @@ jobs:
           SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
 
   production-deploy:
-    needs: [code_lint, tests, build-nuxt-app]
+    needs: [code_lint, client_lint, tests, build-nuxt-app]
     if: success() && github.ref == 'refs/heads/main' && github.event_name == 'push'
     runs-on: ubuntu-latest
     name: Triggers Deployment (Vapor & Amplify)
