Add build context to compose
Signed-off-by: Daniel Ekman <knegge@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@
 services:
   api: &api
     image: jhumanj/opnform-api:latest
+    build:
+      dockerfile: docker/Dockerfile.api
     environment: &api-environment  # Add this anchor
       DB_HOST: db
       REDIS_HOST: redis
@@ -18,6 +20,8 @@ services:
 
   api-worker:
     image: jhumanj/opnform-api:latest
+    build:
+      dockerfile: docker/Dockerfile.api
     command: php artisan queue:work
     environment:
       <<: *api-environment
@@ -29,6 +33,8 @@ services:
 
   ui:
     image: jhumanj/opnform-client:latest
+    build:
+      dockerfile: docker/Dockerfile.client
     env_file: 
     - ./client/.env
 
