Update Docker documentation with build instructions
Enhance Docker deployment documentation by:
- Adding detailed instructions for building Docker images
- Providing two methods for image building (Docker Compose and manual)
- Clarifying how to use local images with docker-compose.override.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   api: &api
     image: jhumanj/opnform-api:latest
     build:
+      context: .
       dockerfile: docker/Dockerfile.api
     environment: &api-environment  # Add this anchor
       DB_HOST: db
@@ -21,6 +22,7 @@ services:
   api-worker:
     image: jhumanj/opnform-api:latest
     build:
+      context: .
       dockerfile: docker/Dockerfile.api
     command: php artisan queue:work
     environment:
@@ -34,6 +36,7 @@ services:
   ui:
     image: jhumanj/opnform-client:latest
     build:
+      context: .
       dockerfile: docker/Dockerfile.client
     env_file: 
     - ./client/.env
