Enhance Docker configuration and CI/CD pipeline
- Update Docker Compose files with improved service configurations
- Add database healthcheck in docker-compose.yml
- Refactor GitHub Actions workflow for Docker image publishing
- Optimize Dockerfile.api with multi-stage build and environment-specific configurations
- Update Nginx configuration for development and production environments

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,14 @@ public/.DS_Store
 *.DS_Store
 docker-compose.override.yml
 /.make.*
+
+# Environment files
+.env
+api/.env
+client/.env
+.env.*
+api/.env.*
+client/.env.*
+!.env.example
+!api/.env.example
+!client/.env.example
