--- a/docker/nginx.dev.conf
+++ b/docker/nginx.dev.conf
@@ -11,6 +11,8 @@ server {
     access_log /dev/stdout;
     error_log  /dev/stderr error;
 
+    index index.html index.htm index.php;
+
     # Development CORS headers
     add_header 'Access-Control-Allow-Origin' 'http://localhost:3000' always;
     add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS, PATCH' always;
@@ -30,38 +32,42 @@ server {
         return 204;
     }
 
-    # Handle API requests
-    location /api/ {
-        rewrite ^/api/(.*) /$1 break;
-        try_files $uri $uri/ /index.php?$query_string;
-
-        location ~ \.php$ {
-            fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass api:9000;
-            fastcgi_index index.php;
-            include fastcgi_params;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param PATH_INFO $fastcgi_path_info;
-            fastcgi_param HTTP_X_FORWARDED_HOST $host;
-            fastcgi_param HTTP_X_FORWARDED_PORT $server_port;
-            fastcgi_param HTTP_X_FORWARDED_PROTO $scheme;
-        }
+    # Development proxy settings
+    location / {
+        proxy_http_version 1.1;
+        proxy_pass http://ui:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_read_timeout 86400;
+        proxy_buffering off;
     }
 
-    # Handle other API-related paths
-    location ~/(open|local\/temp|forms\/assets)/ {
-        try_files $uri $uri/ /index.php?$query_string;
+    # HMR websocket support
+    location /_nuxt {
+        proxy_pass http://ui:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
 
-        location ~ \.php$ {
-            fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass api:9000;
-            fastcgi_index index.php;
-            include fastcgi_params;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param PATH_INFO $fastcgi_path_info;
-            fastcgi_param HTTP_X_FORWARDED_HOST $host;
-            fastcgi_param HTTP_X_FORWARDED_PORT $server_port;
-            fastcgi_param HTTP_X_FORWARDED_PROTO $scheme;
-        }
+    location ~/(api|open|local\/temp|forms\/assets)/ {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass api:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME /usr/share/nginx/html/public/index.php;
+        fastcgi_param REQUEST_URI $api_uri;
     }
 } 
