--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -1,28 +1,50 @@
+# Stage 1: Composer dependencies
+FROM composer:latest as composer
+WORKDIR /app
+COPY api/composer.* ./
+
+ARG APP_ENV=production
+RUN if [ "$APP_ENV" = "production" ]; then \
+    composer install --ignore-platform-req=php --no-dev --optimize-autoloader; \
+    else \
+    composer install --ignore-platform-req=php --optimize-autoloader; \
+    fi
+
+# Stage 2: Final image
 FROM php:8.3-fpm
 
-# syntax=docker/dockerfile:1.3-labs
-
+# Install system dependencies and PHP extensions
 RUN apt-get update && apt-get install -y \
-    libzip-dev \
+    git \
+    curl \
     libpng-dev \
-    postgresql-client \
+    libonig-dev \
+    libxml2-dev \
+    zip \
+    unzip \
     libpq-dev \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
-
-COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
-ENV COMPOSER_ALLOW_SUPERUSER=1
-RUN docker-php-ext-install pdo pgsql pdo_pgsql gd bcmath zip \
+    && docker-php-ext-install pdo_pgsql mbstring exif pcntl bcmath gd \
     && pecl install redis \
     && docker-php-ext-enable redis
 
-WORKDIR /usr/share/nginx/html/
+# Install xdebug if not in production
+ARG APP_ENV=production
+RUN if [ "$APP_ENV" != "production" ]; then \
+    pecl install xdebug && \
+    docker-php-ext-enable xdebug; \
+    fi
 
-# Combine multiple ADD commands into one
-COPY api/composer.json api/composer.lock api/artisan ./
-COPY api/app ./app
+# Configure PHP
+COPY docker/php/php.ini /usr/local/etc/php/conf.d/app.ini
+COPY docker/php/php-fpm.conf /usr/local/etc/php-fpm.d/www.conf
+
+WORKDIR /usr/share/nginx/html
+
+# Copy application files
+COPY api/artisan artisan
 COPY api/bootstrap ./bootstrap
 COPY api/config ./config
+COPY api/app ./app
 COPY api/database ./database
 COPY api/public ./public
 COPY api/routes ./routes
@@ -30,20 +52,13 @@ COPY api/tests ./tests
 COPY api/resources ./resources
 COPY api/storage ./storage
 
-# Install dependencies based on environment
-ARG APP_ENV=production
-RUN if [ "$APP_ENV" = "production" ]; then \
-    composer install --ignore-platform-req=php --no-dev --optimize-autoloader; \
-    else \
-    composer install --ignore-platform-req=php --optimize-autoloader; \
-    fi \
-    && composer clear-cache \
-    && php artisan package:discover --ansi \
-    && chmod -R 775 storage \
-    && chown -R www-data:www-data storage \
-    && mkdir -p storage/framework/sessions storage/framework/views storage/framework/cache \
-    && chown -R www-data:www-data storage \
-    && chmod -R 775 storage
+# Copy vendor directory from composer stage
+COPY --from=composer /app/vendor ./vendor
+
+# Set permissions
+RUN chmod -R 775 storage \
+    && chmod -R 775 bootstrap/cache \
+    && chown -R www-data:www-data /usr/share/nginx/html
 
 COPY docker/php-fpm-entrypoint /usr/local/bin/opnform-entrypoint
 RUN chmod a+x /usr/local/bin/*
