--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -6,42 +6,25 @@ map $original_uri $api_uri {
 server {
     listen       80;
     server_name  opnform;
-    root         /app/public;
+    root         /usr/share/nginx/html/public;
 
     access_log /dev/stdout;
     error_log  /dev/stderr error;
 
     index index.html index.htm index.php;
 
-    # Development proxy settings
     location / {
         proxy_http_version 1.1;
         proxy_pass http://ui:3000;
-        proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Port $server_port;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_read_timeout 86400;
-        proxy_buffering off;
-    }
-
-    # HMR websocket support
-    location /_nuxt {
-        proxy_pass http://ui:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        proxy_set_header Connection "Upgrade";
     }
 
     location ~/(api|open|local\/temp|forms\/assets)/ {
-        set $original_uri $uri;
-        try_files $uri $uri/ /index.php$is_args$args;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
     location ~ \.php$ {
